# vendor_bestechnic

./: OAT.xml  README.md  patch_process.py  vendor_bestechnic.txt
display_demo/: BUILD.gn  config.gni  config.json  config.sh  ohos.build  patch.yml
display_demo/ace_lite_config/: product_acelite_config.h
display_demo/config/: device_info.hcs  hdf.hcs
display_demo/fs/: wifi_Download_cfg.yaml
display_demo/graphic_config/: product_graphic_lite_config.h
display_demo/hals/utils/file/: BUILD.gn
display_demo/hals/utils/sys_param/: BUILD.gn  hal_sys_param.c
display_demo/hals/utils/token/: BUILD.gn
display_demo/hdf_config/: BUILD.gn  hdf.hcs
display_demo/kernel_configs/: debug.config
display_demo/patches/: 0001-base-hiviewdfx-hiview_lite.patch  0001-base-startup-syspara_lite.patch  0001-build-utils-for-liteos_m.patch  0001-device-board-fnlink.patch  0001-device-soc-bestechnic.patch  0001-feat-add-liteos_m-options.patch  0001-feat-add-platform-drivers-options.patch  0001-feat-build-jerryscript-for-liteos_m.patch  0001-feat-build-libfreetype.a-for-liteos_m.patch  0001-feat-build-libgif.a-for-liteos_m.patch  0001-feat-build-libglobal_i18n.a-for-liteos_m.patch  0001-feat-build-libjpeg.a-for-liteos_m.patch  0001-feat-build-libpng.a-for-liteos_m.patch  0001-feat-build-libqrcodegen.a-for-liteos_m.patch  0001-feat-build-media_lite.patch  0001-feat-build-multimedia_utils.patch  0001-feat-foundation_graphic_ui-ui_view-fix-build-issue.patch  0001-feat-porting-aafwk-to-liteos_m.patch  0001-feat-porting-ace-to-liteos_m.patch  0001-feat-porting-appexecfwk_lite-to-liteos_m.patch  0001-feat-porting-graphic_ui-to-liteos_m.patch  0001-feat-porting-graphic_utils-to-liteos_m.patch  0001-fix-work-around-fs-for-arm-none-eabi.patch  0001-fix-work-around-musl-for-arm-none-eabi.patch  0001-foundation-appexecfwk-appexecfwk_lite.patch  0001-foundation-communication-wifi_lite.patch  0001-use-external-HiLogWriteInternal-for-hilog-output.patch  0001-work-around-musl-for-arm-none-eabi.patch  mbedtls.patch
display_demo/tests/: BUILD.gn  app.cpp  example.c  fs_test.c  ui_animator_test.cpp  ui_basic_test.cpp  ui_image_test.cpp  ui_test.cpp  ui_test.h
display_demo/tests/ability/: BUILD.gn  ability_test.cpp  ability_test.h  launcher.cpp  launcher.h
display_demo/tests/drivers/: driver_test.h
display_demo/tests/dsoftbus/: BUILD.gn  main.c
display_demo/tests/fs/: BUILD.gn  fs_test.c  utils_file_test.c
display_demo/tests/histreamer/: BUILD.gn  audio_player.cpp  audio_player.h
display_demo/tests/iot_wifi_ap/: BUILD.gn  wifi_ap.c
display_demo/tests/iot_wifi_sta_connect/: BUILD.gn  wifi_sta_connect.c
display_demo/tests/rpc/: BUILD.gn
display_demo/tests/rpc/src/: rpc_client.c  rpc_server.c
display_demo/tests/ui/: BUILD.gn  ui_basic_test.cpp  ui_test.h  ui_view_test.cpp
display_demo/tests/wifi/: BUILD.gn  wifi_ap.c  wifi_sta.c
display_demo/ui_adapter/: BUILD.gn  touch_input.cpp  ui_main.cpp
hilink_demo/: BUILD.gn  build.sh  config.json  config.sh
hilink_demo/tests/: BUILD.gn  example.c
hilink_demo/tests/drivers/: driver_test.c  spi_test.c  touch_test.c
hilink_demo/tests/fs/: BUILD.gn
hilink_demo/tests/wifi/: BUILD.gn  wifi_ap.c  wifi_sta.c
iotlink_demo/: BUILD.gn  config.json  config.sh  (+1 more)
mini_distributed_music_player/tests/devicemanager/: BUILD.gn
sensor/: BUILD.gn  config.gni  config.json  patch.yml
sensor/config/: device_info.hcs  hdf.hcs
sensor/patches/: 0001-feat-add-liteos_m-options.patch  0001-feat-build-libglobal_resmgr.a-for-liteos_m.patch  0001-feat-build-utils-for-liteos_m.patch  0001-feat-porting-aafwk-to-liteos_m.patch  0001-feat-porting-ace-to-liteos_m.patch  0001-feat-porting-appexecfwk_lite-to-liteos_m.patch  0001-feat-porting-graphic_ui-to-liteos_m.patch  0001-feat-porting-graphic_utils-to-liteos_m.patch  0001-fix-increase-default-task-size.patch
sensor/tests/: BUILD.gn  example.c
sensor/tests/drivers/: BUILD.gn
sensor/tests/fs/: fs_test.c  fs_test.h
sensor/tests/wifi/: BUILD.gn  wifi_sta.c
xts_demo/: BUILD.gn  build.sh  config.json  config.sh  patch.yml
xts_demo/config/: hdf.hcs
xts_demo/fs/: wifi_Download_cfg.yaml
xts_demo/fs/data/data/panel/: app.js  app.js.map  manifest.json
xts_demo/fs/data/data/panel/pages/index/: index.js  index.js.map
xts_demo/graphic_config/: product_graphic_lite_config.h
xts_demo/hals/utils/sys_param/: BUILD.gn  hal_sys_param.c  vendor.para
xts_demo/hals/utils/token/: BUILD.gn  hal_token.c
xts_demo/hdf_config/: BUILD.gn
xts_demo/kernel_configs/: debug.config
xts_demo/patches/: 0001-base-hiviewdfx-hiview_lite.patch  0001-base-security-huks.patch  0001-base-startup-syspara_lite.patch  0001-build-for-xts-test-xts-tools-lite.patch  0001-build-lite.patch  0001-change-per-second.patch  0001-drivers-adapter.patch  0001-feat-base-security-huks-diable-ED25519.patch  0001-feat-build-libfreetype.a-for-liteos_m.patch  0001-feat-fix-case-file-releaed.patch  0001-feat-fix-case-file-releated.patch  0001-feat-test-xts-acts-stacksize-bigger-and-bool-type-bu.patch  0001-feat-test-xts-acts-utils_file_func_test-fix.patch  0001-feat-test-xts-acts-utils_file_func_test-utils_file_r.patch  0001-feat-test-xts-tools-lite-larger-HCTEST-stacksize.patch  0001-feat-third_party-unity-fix-test-fail-macro.patch  0001-feat-third_party-unity-printf-adapter.patch  0001-feat-utils-native-lite-data-prefix.patch  0001-feat-utils-native-lite-data.patch  0001-feat-xts-test-set-max-fd-num-32.patch  0001-fix-stack-overflow.patch  0001-fix-work-around-musl-for-arm-none-eabi.patch  0001-kernel-liteos_m.patch  0001-patch-for-test-xts-acts.patch  0001-test-xts-acts.patch  0001-test-xts-tools-lite.patch  0001-third_party-lwip-support-dhcps.patch  0001-third_party-mbedtls.patch  0001-third_party-musl.patch  0001-third_party-unity.patch  0001-use-external-HiLogWriteInternal-for-hilog-output.patch  0001-utils-native-lite.patch  0001-work-around-fs-for-arm-none-eabi.patch
xts_demo/tests/: BUILD.gn  example.c
xts_demo/tests/drivers/: BUILD.gn  driver_test.c  driver_test.h  touch_test.c
xts_demo/tests/fs/: BUILD.gn  fs_test.c  utils_file_test.c
(+113 files in other folders)
