# Copyright (c) 2021 bestechnic (Shanghai) Technologies CO., LIMITED.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

##################################################
# build configurations
##################################################
ARM_CMNS = false

##################################################
# components configurations
##################################################
communication_wifi_lite_enable = true

drivers_gpio_enable = true
drivers_i2c_enable = true
drivers_spi_enable = false
drivers_uart_enable = false
drivers_pwm_enable = false
drivers_flash_enable = true
drivers_mipi_dsi_enable = true
drivers_lcd_enable = true
drivers_display_enable = true
drivers_touch_enable = true

fs_enable = true

ui_enable = true
ace_enable = true
ability_enable = true

##################################################
# test configurations
##################################################
drivers_test = false
wifi_test = false
fs_test = false
ui_test = false
ability_test = true
