# Copyright (c) 2021 bestechnic (Shanghai) Technologies CO., LIMITED.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("xts_demo") {
  deps = [
    "config:hdf_hcs",
    "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_static",
    "//base/startup/syspara_lite/frameworks/parameter/src:sysparam",
    "//device/bestechnic/${board_name}/hals/security/huks:huks_adapter",
    "//device/bestechnic/${board_name}/components/drivers:drivers_adapter",
    "tests:example",
  ]

  deps += [
    "//test/xts/acts/communication_lite/lwip_hal:ActsLwipTest",
    "//test/xts/acts/communication_lite/wifiservice_hal:ActsWifiServiceTest",
    "//test/xts/acts/startup_lite/syspara_hal:ActsParameterTest",
    "//test/xts/acts/startup_lite/bootstrap_hal:ActsBootstrapTest",
    "//test/xts/acts/utils_lite/file_hal:ActsUtilsFileTest",
    "//test/xts/acts/iot_hardware_lite/iot_controller_hal:ActsWifiIotTest",
    # "//test/xts/acts/kernel_lite/kernelcmsis_hal:ActsCMSISTest",
    "//test/xts/acts/utils_lite/kv_store_hal:ActsKvStoreTest",
    "//test/xts/acts/security_lite/huks_hal:ActsSecurityDataTest",
    "//test/xts/acts/distributed_schedule_lite/system_ability_manager_hal:ActsSamgrTest",
    "//test/xts/acts/update_lite/dupdate_hal:ActsUpdaterFuncTest",
    "//test/xts/acts/hiviewdfx_lite/hilog_hal:ActsDfxFuncTest",
    "//test/xts/acts/hiviewdfx_lite/hievent_hal:ActsHieventLiteTest",
    "//base/hiviewdfx/hievent_lite:hievent_lite"
  ]
}
