# Copyright (c) 2021 bestechnic (Shanghai) Technologies CO., LIMITED.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//device/bestechnic/${board_name}/components/components.gni")

static_library("example") {
  sources = [
    "example.c",
  ]
  defines = []
  deps = [
    "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_static",
    "//device/bestechnic/${board_name}/components/drivers:drivers_adapter",
    "//device/bestechnic/${board_name}/components/fs:fs_adapter",
  ]

  include_dirs = [
    "//utils/native/lite/include",
    "//third_party/musl/porting/liteos_m/kernel/include",
  ]



  deps += [ "fs:fs_test" ]
  defines += [ "FS_TEST" ]
  include_dirs += [ "fs" ]
  deps += [ "wifi:wifi_test" ]
}
