# Copyright (c) 2021 bestechnic (Shanghai) Technologies CO., LIMITED.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../config.gni")

static_library("example") {
  sources = [
    "example.c",
  ]
  defines = []
  deps = [
    "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_static",
    "//device/bestechnic/${board_name}/components/drivers:drivers_adapter",
    "//device/bestechnic/${board_name}/components/fs:fs_adapter",
  ]

  include_dirs = [
    "//utils/native/lite/include",
    "//third_party/musl/porting/liteos_m/kernel/include",
  ]

  if (drivers_test) {
    deps += [ "drivers:drivers_test" ]
    defines += [ "DRIVERS_TEST" ]
  } else if (communication_wifi_lite_enable && wifi_test) {
    deps += [ "wifi:wifi_test" ]
    defines += [ "WIFI_TEST" ]
  } else if (fs_enable && fs_test) {
    deps += [ "fs:fs_test" ]
    defines += [ "FS_TEST" ]
    include_dirs += [ "fs" ]
  }
}
