# Copyright (c) 2021 Bestechnic (Shanghai) Co., Ltd. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

drivers_path = "//device/bestechnic/${board_name}/components/drivers"

import("//build/lite/config/component/lite_component.gni")
import("${drivers_path}/drivers.gni")

static_library("drivers_test") {
  sources = [ "driver_test.c" ]

  if (bes_drivers_gpio_enable) {
    sources += [ "gpio_test.c" ]
  }

  if (bes_drivers_i2c_enable) {
    sources += [ "i2c_test.c" ]
  }

  if (bes_drivers_spi_enable) {
    sources += [ "spi_test.c" ]
  }

  if (bes_drivers_touch_enable) {
    sources += [ "touch_test.c" ]
    defines = [ "TOUCH_TEST" ]
  }

  if (bes_drivers_display_enable) {
    sources += [ "disp_test.c" ]
  }

  include_dirs = hdf_include_dirs
  include_dirs += [
    "${drivers_path}/touch/include",
    "${drivers_path}/display/hal",
    "//drivers/peripheral/display/hal",
    "//drivers/peripheral/display/interfaces/include",
    "//drivers/peripheral/base",
    "//kernel/liteos_m/kal/cmsis",
    "//third_party/musl/porting/liteos_m/kernel/include",
  ]
  deps = [
    "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_static",
    "//device/bestechnic/${board_name}/components/drivers:drivers_adapter",
  ]
}
